--- a/index.html
+++ b/index.html
@@ -1,12 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    />
+    <!-- FontAwesome Icons -->
+    <script
+      src="https://kit.fontawesome.com/c0711139d1.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="assets/css/style.css" />
+
     <title>Javascript quiz</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="intro text-center col-10 col-sm-8 col-md-6">
+      <h1>Javascript Quiz</h1>
+      <p>
+        Try to answer the following code-related questions within the time
+        limit. Keep in mind that incorrect answers will penalize your score/time
+        by ten seconds.
+      </p>
+      <button class="btn start-btn">Start Quiz</button>
+      <p class="enter">Press ENTER to start quiz</p>
+      <footer>
+        <p class="">Design and build by Francisco Gutierrez Rodarte</p>
+
+        <ul class="icons">
+          <li>
+            <a href="mailto:francisco.gutierrezrodarte@du.edu" target="_blank"
+              ><i class="fa-regular fa-envelope"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://github.com/FranciscoGtzRodarte" target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/paconga/" target="_blank"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/francisco-rodarte/"
+              target="_blank"
+            >
+              <i class="fa-brands fa-linkedin-in"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.behance.net/francisco-rodarte" target="_blank"
+              ><i class="fa-brands fa-behance"></i
+            ></a>
+          </li>
+        </ul>
+      </footer>
+    </div>
+    <div class="question col-8 col-sm-6 col-md-4"></div>
+
+    <div class="gui">
+      <div class="showHighscores-container">
+        <button class="btn btn-info custom-btn show-highscores-btn">
+          Show Highscores
+        </button>
+      </div>
+
+      <div class="timer-container hidden">
+        <h3>Time Left:<span class="timerText"></span></h3>
+      </div>
+    </div>
+
+    <div id="saveScore-container" class="my-5 mx-auto col-sm-4 hidden">
+      <h2>All done!</h2>
+      <p>Your final scores is:<span class="scoreText"></span></p>
+      <hr />
+      <form id="save-score-form">
+        <input
+          type="text"
+          class="form-input col-sm-8 p-3 me-3 rounded-3"
+          id="initials-input"
+          name="initials-input"
+          placeholder="Enter your initials"
+        />
+
+        <button class="btn btn-info custom-btn my-5 p-3 col-sm-4">
+          Save score
+        </button>
+      </form>
+    </div>
+
+    <div
+      id="highscore-container"
+      class="my-5 mx-auto text-center col-md-3 hidden"
+    >
+      <h2>High Scores</h2>
+      <hr />
+      <ul id="highscore-list"></ul>
+      <button class="btn btn-info start-over-btn custom-btn start-color">
+        Go back
+      </button>
+      <button class="btn btn-info clear-highscore-btn custom-btn">
+        Clear highscore
+      </button>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
